Fix issue with the display of the grid on Firefox
Changed the way the grid is generated and displayed to avoid
floating-point math which was causing improper display of the
grid on Firefox.

--- a/style.css
+++ b/style.css
@@ -85,13 +85,22 @@ button {
     background-color: white;
     box-shadow: 2px 2px 8px gray; 
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     /* Prevent the grid from being draggable */
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.row {
+    display: flex;
+    flex: 1;
+}
+
+.cell {
+    flex: 1;
 }
 
 .grid:hover {
